src/main/java/com/example/mybookshopapp/errors/ContactConfirmationException.java
package com.example.mybookshopapp.errors;

public class ContactConfirmationException extends Exception{
    public ContactConfirmationException(String message){
        super(message);
    }
}
